<resources>
    <string name="app_name">CollaborativeDrawing</string>
    <string name="title_activity_host_drawing">HostDrawingActivity</string>

    <string name="screen_name_label">Screen Name:</string>
    <string name="start_advertising_button_text">Start A New Session</string>
    <string name="available_sessions_header">Existing Sessions:</string>
    <string name="join_session_button">Join</string>

    <string name="drawing_status_connecting_host">Connecting to session...</string>
    <string name="drawing_status_no_connection">Not connected to internet</string>
    <string name="drawing_status_reconnecting">Attempting to reconnect...</string>
    <string name="drawing_status_connecting_api">Connecting to Google API...</string>
    <string name="drawing_status_connecting_api_failed">Connection to Google API Failed</string>

    <string name="reset_button_text">Reset</string>
    <string name="brush_size_button_text">Brush Size</string>

    <string name="colour_picker_icon">Colour</string>
    <string name="colour_picker_title">Select a Colour:</string>

    <string name="file_name_dialog_header">Enter a name for the drawing:</string>
    <string name="file_name_submit_button">Submit</string>
    <string name="file_name_cancel_button">Cancel</string>
    <string name="file_name_error_message">Error: Invalid file name</string>

    <string name="service_id">swar8080.collaborativedrawing</string>

</resources>
