<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawingToolbar"
    android:title=""
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/colorPrimary"
    android:elevation="4dp"
    >


    <Button android:id="@+id/brushSizeButton"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:layout_marginRight="5dp"
    android:text="@string/brush_size_button_text"
    android:layout_gravity="center"
    >
    </Button>

    <TextView android:id="@+id/colourPickingIcon"
        android:text="@string/colour_picker_icon"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/defaultDrawingColour"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colourBlack"
        android:textStyle="bold"
        ></TextView>

    
    <Button android:id="@+id/resetButton"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/reset_button_text"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        >

    </Button>


</android.support.v7.widget.Toolbar>
