<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/file_name_dialog_header"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        tools:text="File Name"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center">

        <Button
            android:id="@+id/submitFileNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name_submit_button" />

        <Button
            android:id="@+id/cancelFileNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/submitFileNameButton"
            android:text="@string/file_name_cancel_button" />

    </RelativeLayout>

    <LinearLayout android:id="@+id/invalidFileNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:visibility="gone"
        tools:visibility="visible">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:src="@mipmap/ic_error"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/file_name_error_message"/>

    </LinearLayout>



</LinearLayout>